--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: 'KCHAIN.ONE'
-description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
+name: '快链 KCHAIN'
+description: ''
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: '/'
