--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: '快链 KCHAIN'
+name: '快链科技 KChain.news'
 description: ''
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
