--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ authors:
       name:           快链的朋友们
       site:           https://www.wowthemes.net
       avatar:
-      bio:            "方军，著有《平台时代》《区块链超入门》"
+      bio:            "快链朋友们"
       email:          wowthemesnet@gmail.com
       twitter:        https://twitter.com/wowthemesnet
 
