--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,10 @@ authors:
       twitter:        https://twitter.com/wowthemesnet
 
     jane:
-      name:           Jane
+      name:           快知区块链
       site:           https://www.wowthemes.net
       avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
+      bio:            "快知区块链"
       email:          fakemail@gmail.com
       twitter:        https://twitter.com/wowthemesnet
  
