--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ authors:
       name:           快知区块链
       site:           https://www.wowthemes.net
       avatar:         /assets/images/avatar2.jpg
-      bio:            "快知区块链"
+      bio:            "快知区块链研究与出品"
       email:          fakemail@gmail.com
       twitter:        https://twitter.com/wowthemesnet
  
