--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: '快知区块链 Kchain.news'
+name: '快知区块链 Kchain.one'
 description: ''
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
